# occupancy_manager

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  SPEC.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: verify.py
src/occupancy_manager/: __init__.py  engine.py  model.py
tests/: conftest.py  test_complex_scenarios.py  test_engine_basic.py  test_engine_hierarchy.py  test_engine_identity.py  test_engine_locking.py  test_engine_v2.py  test_model.py  test_model_v2.py  test_serialization.py  test_state_restoration.py
