[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "occupancy-manager"
description = "A hierarchical occupancy tracking engine with locking and identity logic."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Michael Cumming", email = "mjcumming@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/occupancy_manager"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/occupancy_manager --cov-report=term-missing"
